Trying to fix the background not filling the whole page on mobile, not fixed yet

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -75,23 +75,32 @@
     .header {
         margin-top: 2vh;
     }
+    .searchbar input {
+        height: 30px;
+    }
+    .searchbar img {
+        height: 30px;
+    }
+    .collapse-button {
+        height: 30px;
+        width: 30px;
+        font-size: 1rem;
+    }
 
     .quick-links {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 10vh;
+        top: 60px;
         right: 0;
-        background-color: rgb(94, 94, 94);
-        gap: 0;
+        gap: 3px;
         margin-right: 4vw;
-        border: 1px solid grey;
     }
 
     .quick-links button {
         width: 100%;
-        background-color: rgba(255, 255, 255, 0);
-        border-radius: 0;
+        background-color: rgba(39, 39, 39, 0.4);
+        border-radius: 10px;
         border-bottom: 1px solid grey;
     }
 
@@ -99,8 +108,6 @@
         display: flex;
         animation: slideDown 0.5s ease-out;
     }
-
-
     .collapse-button {
         display: block;
     }
