--- a/src/components/NowWeatherInfo.css
+++ b/src/components/NowWeatherInfo.css
@@ -30,7 +30,7 @@
 }
 
 .info .wind_dir {
-    height: 4vh;
+    height: 2.5rem;
 }
 
 
@@ -58,13 +58,17 @@
     }
 
     .info h4 {
-        font-size: 1rem;
+        font-size: 0.75rem;
     }
     .info img {
-        height: 3rem;
+        height: 2.5rem;
     }
     .info .humidity_icon {
-        height: 2.5rem;
+        height: 2rem;
+    }
+
+    .info .wind_dir {
+        height: 1.5rem;
     }
 
     .info .cloud_hum{
